sdk-docs_versioned_docs/version-20.0.x/enums/Generated/Types/SettlementTx/SettlementTx.md
---
id: "SettlementTx"
title: "Enumeration: SettlementTx"
sidebar_label: "SettlementTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).SettlementTx

## Enumeration Members

### AddAndAffirmInstruction

• **AddAndAffirmInstruction** = ``"settlement.addAndAffirmInstruction"``

#### Defined in

[generated/types.ts:624](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L624)

___

### AddAndAffirmInstructionWithMemo

• **AddAndAffirmInstructionWithMemo** = ``"settlement.addAndAffirmInstructionWithMemo"``

#### Defined in

[generated/types.ts:639](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L639)

___

### AddAndAffirmInstructionWithMemoV2

• **AddAndAffirmInstructionWithMemoV2** = ``"settlement.addAndAffirmInstructionWithMemoV2"``

#### Defined in

[generated/types.ts:644](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L644)

___

### AddInstruction

• **AddInstruction** = ``"settlement.addInstruction"``

#### Defined in

[generated/types.ts:623](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L623)

___

### AddInstructionWithMemo

• **AddInstructionWithMemo** = ``"settlement.addInstructionWithMemo"``

#### Defined in

[generated/types.ts:638](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L638)

___

### AddInstructionWithMemoV2

• **AddInstructionWithMemoV2** = ``"settlement.addInstructionWithMemoV2"``

#### Defined in

[generated/types.ts:643](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L643)

___

### AffirmInstruction

• **AffirmInstruction** = ``"settlement.affirmInstruction"``

#### Defined in

[generated/types.ts:625](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L625)

___

### AffirmInstructionV2

• **AffirmInstructionV2** = ``"settlement.affirmInstructionV2"``

#### Defined in

[generated/types.ts:645](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L645)

___

### AffirmWithReceipts

• **AffirmWithReceipts** = ``"settlement.affirmWithReceipts"``

#### Defined in

[generated/types.ts:628](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L628)

___

### AllowVenues

• **AllowVenues** = ``"settlement.allowVenues"``

#### Defined in

[generated/types.ts:632](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L632)

___

### ChangeReceiptValidity

• **ChangeReceiptValidity** = ``"settlement.changeReceiptValidity"``

#### Defined in

[generated/types.ts:634](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L634)

___

### ClaimReceipt

• **ClaimReceipt** = ``"settlement.claimReceipt"``

#### Defined in

[generated/types.ts:629](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L629)

___

### CreateVenue

• **CreateVenue** = ``"settlement.createVenue"``

#### Defined in

[generated/types.ts:620](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L620)

___

### DisallowVenues

• **DisallowVenues** = ``"settlement.disallowVenues"``

#### Defined in

[generated/types.ts:633](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L633)

___

### ExecuteManualInstruction

• **ExecuteManualInstruction** = ``"settlement.executeManualInstruction"``

#### Defined in

[generated/types.ts:640](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L640)

___

### ExecuteScheduledInstruction

• **ExecuteScheduledInstruction** = ``"settlement.executeScheduledInstruction"``

#### Defined in

[generated/types.ts:635](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L635)

___

### PlaceholderClaimReceipt

• **PlaceholderClaimReceipt** = ``"settlement.placeholderClaimReceipt"``

#### Defined in

[generated/types.ts:641](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L641)

___

### PlaceholderUnclaimReceipt

• **PlaceholderUnclaimReceipt** = ``"settlement.placeholderUnclaimReceipt"``

#### Defined in

[generated/types.ts:642](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L642)

___

### RejectInstruction

• **RejectInstruction** = ``"settlement.rejectInstruction"``

#### Defined in

[generated/types.ts:627](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L627)

___

### RejectInstructionV2

• **RejectInstructionV2** = ``"settlement.rejectInstructionV2"``

#### Defined in

[generated/types.ts:647](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L647)

___

### RescheduleInstruction

• **RescheduleInstruction** = ``"settlement.rescheduleInstruction"``

#### Defined in

[generated/types.ts:636](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L636)

___

### SetVenueFiltering

• **SetVenueFiltering** = ``"settlement.setVenueFiltering"``

#### Defined in

[generated/types.ts:631](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L631)

___

### UnclaimReceipt

• **UnclaimReceipt** = ``"settlement.unclaimReceipt"``

#### Defined in

[generated/types.ts:630](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L630)

___

### UpdateVenueDetails

• **UpdateVenueDetails** = ``"settlement.updateVenueDetails"``

#### Defined in

[generated/types.ts:621](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L621)

___

### UpdateVenueSigners

• **UpdateVenueSigners** = ``"settlement.updateVenueSigners"``

#### Defined in

[generated/types.ts:637](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L637)

___

### UpdateVenueType

• **UpdateVenueType** = ``"settlement.updateVenueType"``

#### Defined in

[generated/types.ts:622](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L622)

___

### WithdrawAffirmation

• **WithdrawAffirmation** = ``"settlement.withdrawAffirmation"``

#### Defined in

[generated/types.ts:626](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L626)

___

### WithdrawAffirmationV2

• **WithdrawAffirmationV2** = ``"settlement.withdrawAffirmationV2"``

#### Defined in

[generated/types.ts:646](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L646)
