sdk-docs_versioned_docs/version-24.1.x/enums/Generated/Types/SettlementTx/SettlementTx.md
---
id: "SettlementTx"
title: "Enumeration: SettlementTx"
sidebar_label: "SettlementTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).SettlementTx

## Enumeration Members

### AddAndAffirmInstruction

• **AddAndAffirmInstruction** = ``"settlement.addAndAffirmInstruction"``

#### Defined in

[generated/types.ts:641](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L641)

___

### AddAndAffirmInstructionWithMemo

• **AddAndAffirmInstructionWithMemo** = ``"settlement.addAndAffirmInstructionWithMemo"``

#### Defined in

[generated/types.ts:656](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L656)

___

### AddAndAffirmInstructionWithMemoV2

• **AddAndAffirmInstructionWithMemoV2** = ``"settlement.addAndAffirmInstructionWithMemoV2"``

#### Defined in

[generated/types.ts:661](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L661)

___

### AddAndAffirmWithMediators

• **AddAndAffirmWithMediators** = ``"settlement.addAndAffirmWithMediators"``

#### Defined in

[generated/types.ts:679](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L679)

___

### AddInstruction

• **AddInstruction** = ``"settlement.addInstruction"``

#### Defined in

[generated/types.ts:640](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L640)

___

### AddInstructionWithMediators

• **AddInstructionWithMediators** = ``"settlement.addInstructionWithMediators"``

#### Defined in

[generated/types.ts:678](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L678)

___

### AddInstructionWithMemo

• **AddInstructionWithMemo** = ``"settlement.addInstructionWithMemo"``

#### Defined in

[generated/types.ts:655](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L655)

___

### AddInstructionWithMemoV2

• **AddInstructionWithMemoV2** = ``"settlement.addInstructionWithMemoV2"``

#### Defined in

[generated/types.ts:660](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L660)

___

### AffirmInstruction

• **AffirmInstruction** = ``"settlement.affirmInstruction"``

#### Defined in

[generated/types.ts:642](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L642)

___

### AffirmInstructionAsMediator

• **AffirmInstructionAsMediator** = ``"settlement.affirmInstructionAsMediator"``

#### Defined in

[generated/types.ts:680](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L680)

___

### AffirmInstructionV2

• **AffirmInstructionV2** = ``"settlement.affirmInstructionV2"``

#### Defined in

[generated/types.ts:662](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L662)

___

### AffirmInstructionWithCount

• **AffirmInstructionWithCount** = ``"settlement.affirmInstructionWithCount"``

#### Defined in

[generated/types.ts:675](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L675)

___

### AffirmWithReceipts

• **AffirmWithReceipts** = ``"settlement.affirmWithReceipts"``

#### Defined in

[generated/types.ts:645](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L645)

___

### AffirmWithReceiptsWithCount

• **AffirmWithReceiptsWithCount** = ``"settlement.affirmWithReceiptsWithCount"``

#### Defined in

[generated/types.ts:674](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L674)

___

### AllowVenues

• **AllowVenues** = ``"settlement.allowVenues"``

#### Defined in

[generated/types.ts:649](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L649)

___

### ChangeReceiptValidity

• **ChangeReceiptValidity** = ``"settlement.changeReceiptValidity"``

#### Defined in

[generated/types.ts:651](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L651)

___

### ClaimReceipt

• **ClaimReceipt** = ``"settlement.claimReceipt"``

#### Defined in

[generated/types.ts:646](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L646)

___

### CreateVenue

• **CreateVenue** = ``"settlement.createVenue"``

#### Defined in

[generated/types.ts:637](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L637)

___

### DisallowVenues

• **DisallowVenues** = ``"settlement.disallowVenues"``

#### Defined in

[generated/types.ts:650](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L650)

___

### ExecuteManualInstruction

• **ExecuteManualInstruction** = ``"settlement.executeManualInstruction"``

#### Defined in

[generated/types.ts:657](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L657)

___

### ExecuteScheduledInstruction

• **ExecuteScheduledInstruction** = ``"settlement.executeScheduledInstruction"``

#### Defined in

[generated/types.ts:652](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L652)

___

### ExecuteScheduledInstructionV2

• **ExecuteScheduledInstructionV2** = ``"settlement.executeScheduledInstructionV2"``

#### Defined in

[generated/types.ts:665](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L665)

___

### ExecuteScheduledInstructionV3

• **ExecuteScheduledInstructionV3** = ``"settlement.executeScheduledInstructionV3"``

#### Defined in

[generated/types.ts:673](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L673)

___

### PlaceholderAddAndAffirmInstruction

• **PlaceholderAddAndAffirmInstruction** = ``"settlement.placeholderAddAndAffirmInstruction"``

#### Defined in

[generated/types.ts:667](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L667)

___

### PlaceholderAddAndAffirmInstructionWithMemo

• **PlaceholderAddAndAffirmInstructionWithMemo** = ``"settlement.placeholderAddAndAffirmInstructionWithMemo"``

#### Defined in

[generated/types.ts:672](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L672)

___

### PlaceholderAddInstruction

• **PlaceholderAddInstruction** = ``"settlement.placeholderAddInstruction"``

#### Defined in

[generated/types.ts:666](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L666)

___

### PlaceholderAddInstructionWithMemo

• **PlaceholderAddInstructionWithMemo** = ``"settlement.placeholderAddInstructionWithMemo"``

#### Defined in

[generated/types.ts:671](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L671)

___

### PlaceholderAffirmInstruction

• **PlaceholderAffirmInstruction** = ``"settlement.placeholderAffirmInstruction"``

#### Defined in

[generated/types.ts:668](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L668)

___

### PlaceholderClaimReceipt

• **PlaceholderClaimReceipt** = ``"settlement.placeholderClaimReceipt"``

#### Defined in

[generated/types.ts:658](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L658)

___

### PlaceholderRejectInstruction

• **PlaceholderRejectInstruction** = ``"settlement.placeholderRejectInstruction"``

#### Defined in

[generated/types.ts:670](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L670)

___

### PlaceholderUnclaimReceipt

• **PlaceholderUnclaimReceipt** = ``"settlement.placeholderUnclaimReceipt"``

#### Defined in

[generated/types.ts:659](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L659)

___

### PlaceholderWithdrawAffirmation

• **PlaceholderWithdrawAffirmation** = ``"settlement.placeholderWithdrawAffirmation"``

#### Defined in

[generated/types.ts:669](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L669)

___

### RejectInstruction

• **RejectInstruction** = ``"settlement.rejectInstruction"``

#### Defined in

[generated/types.ts:644](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L644)

___

### RejectInstructionAsMediator

• **RejectInstructionAsMediator** = ``"settlement.rejectInstructionAsMediator"``

#### Defined in

[generated/types.ts:682](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L682)

___

### RejectInstructionV2

• **RejectInstructionV2** = ``"settlement.rejectInstructionV2"``

#### Defined in

[generated/types.ts:664](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L664)

___

### RejectInstructionWithCount

• **RejectInstructionWithCount** = ``"settlement.rejectInstructionWithCount"``

#### Defined in

[generated/types.ts:676](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L676)

___

### RescheduleInstruction

• **RescheduleInstruction** = ``"settlement.rescheduleInstruction"``

#### Defined in

[generated/types.ts:653](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L653)

___

### SetVenueFiltering

• **SetVenueFiltering** = ``"settlement.setVenueFiltering"``

#### Defined in

[generated/types.ts:648](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L648)

___

### UnclaimReceipt

• **UnclaimReceipt** = ``"settlement.unclaimReceipt"``

#### Defined in

[generated/types.ts:647](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L647)

___

### UpdateVenueDetails

• **UpdateVenueDetails** = ``"settlement.updateVenueDetails"``

#### Defined in

[generated/types.ts:638](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L638)

___

### UpdateVenueSigners

• **UpdateVenueSigners** = ``"settlement.updateVenueSigners"``

#### Defined in

[generated/types.ts:654](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L654)

___

### UpdateVenueType

• **UpdateVenueType** = ``"settlement.updateVenueType"``

#### Defined in

[generated/types.ts:639](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L639)

___

### WithdrawAffirmation

• **WithdrawAffirmation** = ``"settlement.withdrawAffirmation"``

#### Defined in

[generated/types.ts:643](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L643)

___

### WithdrawAffirmationAsMediator

• **WithdrawAffirmationAsMediator** = ``"settlement.withdrawAffirmationAsMediator"``

#### Defined in

[generated/types.ts:681](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L681)

___

### WithdrawAffirmationV2

• **WithdrawAffirmationV2** = ``"settlement.withdrawAffirmationV2"``

#### Defined in

[generated/types.ts:663](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L663)

___

### WithdrawAffirmationWithCount

• **WithdrawAffirmationWithCount** = ``"settlement.withdrawAffirmationWithCount"``

#### Defined in

[generated/types.ts:677](https://github.com/PolymeshAssociation/polymesh-sdk/blob/968f8d70c/src/generated/types.ts#L677)
